# ezex-kms

./: .editorconfig  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: lint.yml  publish.yml  test.yml
src/: config.rs  main.rs  main_test.rs
src/api/grpc/: config.rs  mod.rs  server.rs  service.rs
src/api/grpc/proto/: kms.proto
src/cmd/: start.rs
