[package]
name = "ezex-kms"
version = "1.0.0"
authors = ["ezeX development team"]
edition = "2024"
license = "MIT"

[dependencies]
tonic = { version = "0.12" }
prost = "0.13"
log = "0.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# Add dev-dependencies here

[build-dependencies]
tonic-build = { version = "0.12" }
